deterministic state sync
